# python-project-lvl4

./: Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python_ci.yml
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_created_at_alter_label_name.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_tasklabel_task_labels.py  0003_alter_task_created_at_alter_task_creator_and_more.py
task_manager/templates/: index.html  layout.html  login.html
task_manager/templates/components/: footer.html  meta.html  (+1 more)
task_manager/users/: apps.py  context_processors.py  forms.py  mixins.py  models.py  urls.py  views.py
templates/: home.html  index.html  layout.html
templates/components/: navbar.html
templates/users/: create.html  index.html
tests/: conftest.py  test_index.py  test_labels.py  test_pages.py  test_statuses.py  test_tasks.py  test_users.py
tests/fixtures/: labels.json  statuses.json  task_labels.json  tasks.json  test_data.json  users.json
users/: context_processors.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_created_at_alter_user_username.py  0003_alter_user_created_at.py
(+23 files in other folders)
