[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple task manager in Django"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.2"
django-extensions = "^3.1.5"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.0"
pytest = "^6.2.5"
ipython = "^7.30.1"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
