[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple task manager in Django"
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.3"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.2"
django-extensions = "^3.1.5"
django-bootstrap4 = "^21.2"
django-filter = "^22.1"
rollbar = "^0.16.3"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
ipython = "^7.30.1"
pytest = "^6.2.5"
wemake-python-styleguide = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
